2008-06-13  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug #960 - PangoContext creation code should not be duplicated

	* clutter/clutter-private.h:
	* clutter/clutter-main.c:
	(_clutter_context_create_pango_context): Abstract the creation
	of the PangoContext inside its own function, to avoid code and
	bugs duplication. (Tommi Komulainen)

	* clutter/clutter-entry.c (clutter_entry_init): Use the newly
	added PangoContext creation function.

	* clutter/clutter-label.c (clutter_label_init): Ditto as above.

2008-06-12  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug #964 - "unrealized" signal of ClutterActor wrongly named

	* clutter/clutter-actor.c (clutter_actor_class_init): Fix typo
	in the ::unrealize signal name. (Armin Burgmeier)

2008-06-12  Emmanuele Bassi  <ebassi@openedhand.com>

	* doc/reference/cogl/Makefile.am: Ignore cogl/gl and cogl/gles
	when building the documentation.

	* clutter/cogl/cogl.h.in: Add sections in the header file.

2008-06-12  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Add more clarifications on the
	size and position accessors and the distinction between
	transformed and untransformed actor box inside the actor's
	description.

2008-06-12  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Clarify the documentation of the
	accessors of the width and height.

2008-06-12  Neil Roberts  <neil@o-hand.com>

	* clutter/win32/clutter-stage-win32.c: Updated to the new layout
	API. All code to do with positioning the stage has been removed so
	the window is left where Windows wants to put it and it can not be
	moved with clutter_actor_set_position.

	* clutter/win32/clutter-stage-win32.h (ClutterStageWin32): Remove
	win_xpos and win_ypos.

	* clutter/win32/clutter-event-win32.c (message_translate): Remove
	the handler for WM_MOVE because the stage no longer cares where it
	is positioned.

2008-06-12  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.[ch]: Documentation fixes.
